added signal peptide figure

--- a/lokalizom.bib
+++ b/lokalizom.bib
@@ -2910,7 +2910,7 @@ Sequence Analysis, Protein/*methods},
 
 @article{1991hofmannmutations,
    author = {Hofmann, Kathryn J. and Schultz, Loren D.},
-   title = {Mutations of the α-galactosidase signal peptide which greatly enhance secretion of heterologous proteins by yeast},
+   title = {Mutations of the alpha-galactosidase signal peptide which greatly enhance secretion of heterologous proteins by yeast},
    journal = {Gene},
    volume = {101},
    number = {1},
