added new plot, synchronised references

--- a/paper.tex
+++ b/paper.tex
@@ -62,7 +62,7 @@ The other type of software incorporates into the prediction process theoretical 
 
 \begin{figure}[ht]\centering
 \includegraphics[width=0.9\textwidth]{reglen.png}
-\caption{Distribution of the lengths of signal peptide regions. The data was extracted from 2~589 signal peptide sequences derived from UniProt database (see \textbf{Data selection} in \textbf{Methods}).}.
+\caption{A) Distribution of lengths of signal peptides. B) Distribution of the lengths of signal peptide regions. The data was extracted from 2~589 signal peptide sequences derived from UniProt database (see \textbf{Data selection} in \textbf{Methods}).}.
 \label{fig:reglen}
 \end{figure}
 
